--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.0.3",
+    "mercadopago": "^2.0.8",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.1",
     "nodemailer": "^6.9.8",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +43,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
