--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/stripe": "^8.0.417",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.3",
     "mercadopago": "^2.0.8",
@@ -34,6 +35,7 @@
     "nodemailer": "^6.9.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "stripe": "^16.2.0",
     "typeorm": "^0.3.19"
   },
   "devDependencies": {
