--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.10",
     "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/websockets": "^10.3.10",
     "@types/stripe": "^8.0.417",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.3",
@@ -35,6 +37,7 @@
     "nodemailer": "^6.9.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5",
     "stripe": "^16.2.0",
     "typeorm": "^0.3.19"
   },
