--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -29,6 +30,7 @@
     "@nestjs/typeorm": "^10.0.1",
     "@nestjs/websockets": "^10.3.10",
     "@types/stripe": "^8.0.417",
+    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.3",
     "mercadopago": "^2.0.8",
